<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundkalkulator"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/akaya_telivigala"
        android:gravity="center"
        android:text="@string/kalkulator"
        android:textColor="@color/cardview_dark_background"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/bilangan_pertama"
        android:textSize="10pt"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_bilangan_pertama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/bilangan_kedua"
        android:textSize="10pt"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_bilangan_kedua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonTambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:text="@string/Tambah" />

        <Button
            android:id="@+id/buttonKurang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/kurang" />

        <Button
            android:id="@+id/buttonKali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/Kali" />

        <Button
            android:id="@+id/buttonBagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/bagi" />
    </LinearLayout>

    <TextView
        android:id="@+id/hasil_perhitungan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:gravity="center"
        android:text="@string/hasil"
        android:textSize="10pt"
        android:textStyle="bold" />
</LinearLayout>